--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,13 @@
 
   <main>
     <h1>Contact Us</h1>
-    <form>
-      <label for="email">Email:</label>
-      <input type="email" id="email" required>
-      <button type="submit">Submit</button>
-    </form>
+    
+<section class="contact-info">
+      <h2>Get in Touch</h2>
+      <p><strong>Phone:</strong> +234-801078954</p>
+      <p><strong>Email:</strong> richytosinshopx.com</p>
+      <p><strong>Website:</strong> <a href="https://brea351.github.io/ecommerce-website/" target="_blank">https://brea351.github.io/ecommerce-website/</a></p>
+    </section>
   </main>
 
   <footer>
