--- a/products.html
+++ b/products.html
@@ -20,16 +20,38 @@
 
   <main>
     <h1>Our Products</h1>
-    <div class="product-card">
-      <img src="images/product2.jpg" alt="Product 2" />
-      <h3>Another Product</h3>
-      <p>$29.99</p>
-      <button onclick="addToCart()">Add to Cart</button>
-    </div>
+    <section class="product-grid">
+      <div class="product-card">
+        <img src="images/product 1.jpg" alt="Product 1" />
+        <h3>Product 1</h3>
+        <p>$9.99</p>
+        <button onclick="addToCart()">Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="images/product 2.jpg" alt="Product 2" />
+        <h3>Product 2</h3>
+        <p>$10.99</p>
+        <button onclick="addToCart()">Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="images/product 3.jpg" alt="Product 3" />
+        <h3>Product 3</h3>
+        <p>$15.99</p>
+        <button onclick="addToCart()">Add to Cart</button>
+      </div>
+      <div class="product-card">
+        <img src="images/product 4.jpg" alt="Product 4" />
+        <h3>Product 4</h3>
+        <p>$20.99</p>
+        <button onclick="addToCart()">Add to Cart</button>
+      </div>
+    </section>
   </main>
 
   <footer>
     <p>&copy; 2025 ShopX</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
