Updated CSS for hero background image and responsiveness

--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
       <p>Your one-stop online store</p>
     </section>
 
-    <section class="featured-products">
-      <div class="product-card">
-        <img src="images/product 1.jpg" alt="Product 1" />
-        <h3>Product Name</h3>
-        <p>$9.99</p>
-        <button onclick="addToCart()">Add to Cart</button>
-      </div>
-    </section>
+    <!-- You can add featured products here if needed -->
   </main>
 
   <footer>
